# arec_agent

./: .env  .gitignore  Cargo.toml  README.md
exercises/: day1  day2  day3  day4  day5  day6  day7  day8  day9
src/: main.rs
src/agent/: context.rs  planner.rs
src/tools/: config.rs  executor.rs  llm.rs  mod.rs  research.rs  scraper.rs  scrapper.rs
