[package]
name = "arec_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"

# For scraping
scraper = "0.19" # for html parsing
url = "2.5" # for proper URL handling

# For env vars
dotenvy = "0.15"
